--- a/src/components/NavList/NavList.style.scss
+++ b/src/components/NavList/NavList.style.scss
@@ -4,7 +4,8 @@
     list-style-type: none;
     display: flex;
 
-    & li:hover a {
+    & li:hover a,
+    a.active {
       background-color: #f8dcd3;
     }
 
